<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:id="@+id/editpro"
        tools:context=".RMS.fragments.ProfileFragment">


        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Edit Profile"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAdd"
            android:layout_width="218dp"
            android:layout_height="191dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/no_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/profilename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Aayush Shrestha"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAdd" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="347dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/person"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="Name"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilename" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/email"
            android:drawablePadding="16dp"
            android:singleLine="true"
            android:ems="10"
            android:hint="Email"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="347dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/location"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="Address"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="number"
            android:singleLine="true"
            android:padding="16dp"
            app:layout_constraintEnd_toStartOf="@+id/edit_gender"
            app:layout_constraintHorizontal_bias="0.653"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_address"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_dobdate"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_border"
            android:ems="10"
            android:text="Date Of Birth"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone"
            tools:ignore="MissingConstraints" />


        <Spinner
            android:id="@+id/edit_gender"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/person"
            android:drawablePadding="16dp"
            android:ems="10"
            android:entries="@array/gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_address"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/gender"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="595dp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_gender"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_saveprofile"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_border"
            android:backgroundTint="#27a9ff"
            android:text="Save Profile"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintCircleRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_dobdate"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_saveprofile"
            app:menu="@menu/bottomnav_menu"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>