...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <RelativeLayout
        android:id="@+id/userprofile"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RMS.fragments.ProfileFragment">
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/btn_editprofile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Edit Profile"
                        android:background="@drawable/round_border"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
...
