<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RMS"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/login_email"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:hint="Enter Email"
        />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/login_password"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Login"
        android:backgroundTint="@color/blue_a400"
        android:textColorHint="@color/white"
        />


</LinearLayout>