<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/Home"
        android:icon="@drawable/home_icon"
        android:title="Home"
        />

    <item
        android:id="@+id/Menu"
        android:icon="@drawable/restaurant_menu"
        android:title="Menu"
        />
    <item
    android:id="@+id/Fav"
    android:icon="@drawable/restaurant_menu"
    android:title="Fav"
    />


    <item
        android:id="@+id/Table"
        android:icon="@drawable/table_view_24"
        android:title="Table"
        />

    <item
        android:id="@+id/Profile"
        android:icon="@drawable/ic_person"
        android:title="Profile"
        />
</menu>